# 2026.3.18-sk_mpc_controller

./: README.md  package.xml  setup.cfg  setup.py
config/: mpc_params.yaml
launch/: mpc_three_nodes.launch.py
resource/: sk_mpc_controller
sk_mpc_controller/: csv_topic_logger_node.py  dxy_to_robot_command_bridge.py  mpc_node.py  mpc_node_2d.py  mpc_to_robot_command_bridge.py  perception_to_mpc_inputs_node.py  perception_to_mpc_inputs_node_v2.py
