<?xml version="1.0"?>
<package format="3">
  <name>sk_mpc_controller</name>
  <version>0.0.1</version>
  <description>Stability-aware MPC controller for ultrasound-guided tissue extraction</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

